# rust-graphql-backend

./: .gitignore  Cargo.toml  README.md
migrations/2022-08-18-230652_create_todos/: up.sql
src/: dataloader.rs  db.rs  graphql_schema.rs  main.rs  models.rs  schema.rs
src/graphql_roots/: mod.rs  mutations.rs  queries.rs  root.rs  subscriptions.rs
src/models/: todos.rs
src/queries/: graphql_schema.rs
src/schema/: todos.rs
