[package]
name = "rust-graphql-backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.6.2", features = ["cors"] }
juniper = "0.16.1"
rocket_cors = "0.6.0"
diesel = { version = "2.2.6", features = ["postgres"] }
dotenv = "0.15.0"
serde_json = "1.0.134"
anyhow = "1.0.95"
dataloader = "0.18.0"

env_logger = "0.9.0"
log = "0.4.17"
